--- a/_posts/2018-12-20-porch.html
+++ b/_posts/2018-12-20-porch.html
@@ -7,6 +7,20 @@ permalink: /porch
 
 <p>This is a story about the porch. It is a long and interesting story that takes a long time to tell. Why don't you have a cup of tea and I'll tell you about it.
 </p>
+<a data-open="porch-before">show the porch before</a>
+<div class="grid-x grid-margin-x">
+    <div class="callout cell small-6 large-4">this is an image thumbnail</div>
+    <div class="callout cell small-6 large-4">this is an image thumbnail</div>
+    <div class="callout cell small-6 large-4">this is an image thumbnail</div>
+</div>
+<div class="reveal" id="porch-before" data-reveal>
+  <h1>Awesome. I Have It.</h1>
+  <p class="lead">Your couch. It is mine.</p>
+  <p>I'm a cool paragraph that lives inside of an even cooler modal. Wins!</p>
+  <button class="close-button" data-close aria-label="Close modal" type="button">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
 <!--more-->
 <p>
 Here's the rest of the story.
