--- a/_posts/2018-12-20-porch.html
+++ b/_posts/2018-12-20-porch.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: post
 excerpt_separator: <!--more-->
 title:  "Front Porch"
 permalink: /porch
@@ -7,7 +7,7 @@ permalink: /porch
 
 <p>This is a story about the porch. It is a long and interesting story that takes a long time to tell. Why don't you have a cup of tea and I'll tell you about it.
 </p>
-<div class="grid-x grid-margin-x">
+<div class="grid-x grid-margin-x excerpt">
     <div class="cell small-6 medium-4 large-4">
     <a data-open="porch-before" class="cell small-6 medium-4 large-4">
         <img data-interchange="[{{ site.url }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_276.jpg, small], [{{ site.url }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_596.jpg, medium], [{{ site.url }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_659.jpg, large]" >
@@ -23,6 +23,18 @@ permalink: /porch
   </button>
 </div>
 <!--more-->
-<p>
-Here's the rest of the story.
-</p>
+<div class="grid-x grid-margin-x more">
+    <div class="cell small-12 medium-6 large-6 speech voice-kepler">
+      <p>
+        Our kitchen smells of old softwood covered by what is now paper pulp but may have once been a more substantial layer between wood and tile, the remnants of early formaldehyde-ridden particle board, and the insides of walls that haven’t been exposed to light and air for almost 100 years. Also in the mix is the familiar pine framing that sat on our garage floor in a pile where I had to stumble over it every time I put away or retrieved Max, my folding bike. The morning light now beams freely through the kitchen window into the dining room since the wall was taken down between the two spaces. On its way, it scratches over protruding corners of fiberglass rolls, splintering ends of dimensional lumber, and masonry rubble. Em had a vision of how the natural light would flow before we started. Once demolition was complete, she stood where the wall once was and was satisfied to see the vision realized. The internal systems of our house are mostly visible in the kitchen: old iron pipes with corrosion spilling out of the joints, plumbing traps from the second floor bathroom above, capped stubs of new copper water supply lines, snipped old electrical cables, new red and blue flexible plastic arteries and veins.
+      </p>
+      <p>
+        Somebody drew a waterfowl on a piece of the framing. I am not sure who it was or why this was done, but I appreciate it. One day, someone else will take down the wall and discover it. I hope that person will be amused. When Em came to visit me in the Netherlands, there was a bench with swan sculptures on the side of it. The bench was secured in place with chains, and Em made a comment that nobody would swander off with it.
+      </p>
+    </div>
+    <div class="cell small-12 medium-6 large-6 speech voice-emandm">
+      <p>
+        This is the first big project we’re doing with the inheritance from my late Grandma Rice. We realized as we were going through her old yearbook that her friends called her Spigot (or Spiggott) since her last name at the time was Fawcett. It also seemed that one friend filled in an entire page of her yearbook. Seeing that yearbook revealed a side of her that I never knew. I remember her as chatty, full of energy and optimistic, but also somewhat proper. She got dressed up and went to her Presbyterian church every Sunday. Even in her last years, she and her friends in her retirement home got dressed up quite fancy to go to dinner with each other. I had a hard time imagining anyone calling her Spiggott. During our search for a new kitchen faucet, I thought of her often.
+      </p>
+    </div>
+</div>
