--- a/_posts/2018-12-20-porch.html
+++ b/_posts/2018-12-20-porch.html
@@ -8,13 +8,18 @@ permalink: /porch
 <p>This is a story about the porch. It is a long and interesting story that takes a long time to tell. Why don't you have a cup of tea and I'll tell you about it.
 </p>
 <div class="grid-x grid-margin-x excerpt">
-    <div class="cell small-6 medium-4 large-4">
-    <a data-open="porch-before" class="cell small-6 medium-4 large-4">
-        <img data-interchange="[{{ site.url }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_276.jpg, small], [{{ site.url }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_596.jpg, medium], [{{ site.url }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_659.jpg, large]" >
-    </a>
+    <div class="cell small-6 medium-4 large-3">
+      <a data-open="porch-before" class="cell small-6 medium-4 large-4">
+          <img data-interchange="[{{ site.url }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_276.jpg, small], [{{ site.url }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_596.jpg, medium], [{{ site.url }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_659.jpg, large]" >
+      </a>
     </div>
-    <div class="cell small-6 medium-4 large-4">this is an image thumbnail</div>
-    <div class="cell small-6 medium-4 large-4">this is an image thumbnail</div>
+    <div class="cell small-6 medium-4 large-3">this is an image thumbnail</div>
+    <div class="cell small-6 medium-4 large-3">
+      <a data-open="porch-before" class="cell small-6 medium-4 large-4">
+          <img data-interchange="[{{ site.url }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_276.jpg, small], [{{ site.url }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_596.jpg, medium], [{{ site.url }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_659.jpg, large]" >
+      </a>
+    </div>
+    <div class="cell small-6 medium-4 large-3">this is an image thumbnail</div>
 </div>
 <div class="reveal" id="porch-before" data-reveal>
   <img data-interchange="[{{ site.url }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_659.jpg, small], [{{ site.url }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_1080.jpg, medium], [{{ site.url }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_1080.jpg, large]" >
