corrected bubble positioning

--- a/_posts/2018-12-20-porch.html
+++ b/_posts/2018-12-20-porch.html
@@ -38,6 +38,8 @@ permalink: /porch
           Somebody drew a waterfowl on a piece of the framing. I am not sure who it was or why this was done, but I appreciate it. One day, someone else will take down the wall and discover it. I hope that person will be amused. When Em came to visit me in the Netherlands, there was a bench with swan sculptures on the side of it. The bench was secured in place with chains, and Em made a comment that nobody would swander off with it.
         </p>
       </div>
+      <div class="speech-bottom">
+      </div>
       <div class="attribution">
         <div class="bubble">
         </div>
@@ -51,6 +53,8 @@ permalink: /porch
         <p>
           This is the first big project we’re doing with the inheritance from my late Grandma Rice. We realized as we were going through her old yearbook that her friends called her Spigot (or Spiggott) since her last name at the time was Fawcett. It also seemed that one friend filled in an entire page of her yearbook. Seeing that yearbook revealed a side of her that I never knew. I remember her as chatty, full of energy and optimistic, but also somewhat proper. She got dressed up and went to her Presbyterian church every Sunday. Even in her last years, she and her friends in her retirement home got dressed up quite fancy to go to dinner with each other. I had a hard time imagining anyone calling her Spiggott. During our search for a new kitchen faucet, I thought of her often.
         </p>
+      </div>
+      <div class="speech-bottom">
       </div>
       <div class="attribution">
         <div class="bubble">
