changing to reference baseurl

--- a/_posts/2018-12-20-porch.html
+++ b/_posts/2018-12-20-porch.html
@@ -10,19 +10,19 @@ permalink: /porch
 <div class="grid-x grid-margin-x excerpt">
     <div class="cell small-6 medium-4 large-3">
       <a data-open="porch-before" class="cell small-6 medium-4 large-4">
-          <img data-interchange="[{{ site.url }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_276.jpg, small], [{{ site.url }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_596.jpg, medium], [{{ site.url }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_659.jpg, large]" >
+          <img data-interchange="[{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_276.jpg, small], [{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_596.jpg, medium], [{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_659.jpg, large]" >
       </a>
     </div>
     <div class="cell small-6 medium-4 large-3">this is an image thumbnail</div>
     <div class="cell small-6 medium-4 large-3">
       <a data-open="porch-before" class="cell small-6 medium-4 large-4">
-          <img data-interchange="[{{ site.url }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_276.jpg, small], [{{ site.url }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_596.jpg, medium], [{{ site.url }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_659.jpg, large]" >
+          <img data-interchange="[{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_276.jpg, small], [{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_596.jpg, medium], [{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_659.jpg, large]" >
       </a>
     </div>
     <div class="cell small-6 medium-4 large-3">this is an image thumbnail</div>
 </div>
 <div class="reveal" id="porch-before" data-reveal>
-  <img data-interchange="[{{ site.url }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_659.jpg, small], [{{ site.url }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_1080.jpg, medium], [{{ site.url }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_1080.jpg, large]" >
+  <img data-interchange="[{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_659.jpg, small], [{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_1080.jpg, medium], [{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_1080.jpg, large]" >
   <button class="close-button" data-close aria-label="Close modal" type="button">
     <span aria-hidden="true">&times;</span>
   </button>
@@ -44,7 +44,7 @@ permalink: /porch
         <div class="bubble">
         </div>
         <div class="speaker">
-          <img src="{{ site.url }}/img/kepler-curl.png">
+          <img src="{{ site.baseurl }}/img/kepler-curl.png">
         </div>
       </div>
     </div>
@@ -60,7 +60,7 @@ permalink: /porch
         <div class="bubble">
         </div>
         <div class="speaker">
-          <img src="{{ site.url }}/img/lightning.png">
+          <img src="{{ site.baseurl }}/img/lightning.png">
         </div>
       </div>
     </div>
