adding kepler-speech

--- a/_posts/2018-12-20-porch.html
+++ b/_posts/2018-12-20-porch.html
@@ -44,7 +44,7 @@ permalink: /porch.html
         <div class="bubble">
         </div>
         <div class="speaker">
-          <img src="{{ site.baseurl }}/img/kepler-speech.png" width="52" height="48">
+          <img src="{{ site.baseurl }}/img/kepler-curl.png">
         </div>
       </div>
     </div>
@@ -60,7 +60,7 @@ permalink: /porch.html
         <div class="bubble">
         </div>
         <div class="speaker">
-          <img src="{{ site.baseurl }}/img/us.png" width="76" height="48">
+          <img src="{{ site.baseurl }}/img/lightning.png">
         </div>
       </div>
     </div>
