attempt at multiple permalinks using redirect-from plugin

--- a/_posts/2018-12-20-porch.html
+++ b/_posts/2018-12-20-porch.html
@@ -2,7 +2,7 @@
 layout: post
 excerpt_separator: <!--more-->
 title:  "Front Porch"
-permalink: /porch.html
+permalink: /porch/post.html
 ---
 
 <p>This is a story about the porch. It is a long and interesting story that takes a long time to tell. Why don't you have a cup of tea and I'll tell you about it.
