--- a/blub.html
+++ b/blub.html
@@ -2,6 +2,11 @@
 layout: page
 title:  "Blub"
 permalink: /blub.html
+redirect_from:
+  - /porch/blub.html
+  - /kitchen/blub.html
+  - /beard/blub.html
+  - /baby/blub.html
 ---
 
 <div class="grid-x grid-margin-x more" id="speeches">
