wrapping text around kepler-greeting

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@ layout: home
 title: home
 ---
 
-    <h1>Season's Greetings</h1>
-    <p>
-      I am a cat.
-    </p>
+<h1>Season's Greetings</h1>
+<p>
+  <img src="{{site.baseurl}}/img/kepler-face_rz3viz/kepler-face_rz3viz_c_scale,w_276.png" width="138" height="185" id="kepler-greeting">
+  I am a cat.
+</p>
