checkpoint scaling kepler greeting image

--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
 layout: home
 title: home
 ---
-
 <h1>Season's Greetings</h1>
-<p>
-  <img src="{{site.baseurl}}/img/kepler-face_rz3viz/kepler-face_rz3viz_c_scale,w_276.png" width="138" height="185" id="kepler-greeting">
-  I am a cat.
-</p>
+  <div class="grid-x grid-margin-x excerpt">
+    <div class="cell small-3 medium-2 large-2">
+      <img src="{{site.baseurl}}/img/kepler-face_rz3viz/kepler-face_rz3viz_c_scale,w_276.png" id="kepler-greeting">
+    </div>
+    <div class="cell small-9 medium-10 large-10">
+      It’s been a busy year for Em & M, so I’m in charge of the card this year. Here are a few things that happened this year.
+    </div>
+  </div>
