beginning content for porch

--- a/_posts/2018-12-21-beard.html
+++ b/_posts/2018-12-21-beard.html
@@ -4,9 +4,12 @@ excerpt_separator: <!--more-->
 title:  "Beard"
 permalink: /beard/post.html
 ---
-
-<p>This is a story about the beard. It is a long and interesting story that takes a long time to tell. Why don't you have a cup of tea and I'll tell you about it.
-</p>
+<div class="grid-x grid-margin-x excerpt">
+  <div class="cell small-12 medium-8 large-9">
+    <p>This is a story about the beard. It is a long and interesting story that takes a long time to tell. Why don't you have a cup of tea and I'll tell you about it.
+    </p>
+  </div>
+</div>
 <div class="grid-x grid-margin-x excerpt">
     <div class="cell small-6 medium-4 large-3">
       <a data-open="porch-before" class="cell small-6 medium-4 large-4">
