--- a/_posts/2018-12-23-porch.html
+++ b/_posts/2018-12-23-porch.html
@@ -4,22 +4,23 @@ excerpt_separator: <!--more-->
 title:  "Front Porch"
 permalink: /porch/post.html
 ---
-
-<p>This is a story about the porch. It is a long and interesting story that takes a long time to tell. Why don't you have a cup of tea and I'll tell you about it.
-</p>
+<div class="grid-x grid-margin-x excerpt">
+  <div class="cell small-12 medium-8 large-9">
+    <p>This is a story about the porch. It is a long and interesting story that takes a long time to tell. Why don't you have a cup of tea and I'll tell you about it.
+    </p>
+  </div>
+</div>
 <div class="grid-x grid-margin-x excerpt">
     <div class="cell small-6 medium-4 large-3">
       <a data-open="porch-before" class="cell small-6 medium-4 large-4">
           <img data-interchange="[{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_276.jpg, small], [{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_596.jpg, medium], [{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_659.jpg, large]" >
       </a>
     </div>
-    <div class="cell small-6 medium-4 large-3">this is an image thumbnail</div>
     <div class="cell small-6 medium-4 large-3">
       <a data-open="porch-before" class="cell small-6 medium-4 large-4">
-          <img data-interchange="[{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_276.jpg, small], [{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_596.jpg, medium], [{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_659.jpg, large]" >
+          <img data-interchange="[{{ site.baseurl }}/img/front-entry-after_g9tv58/front-entry-after_g9tv58_c_scale,w_276.jpg, small], [{{ site.baseurl }}/img/front-entry-after_g9tv58/front-entry-after_g9tv58_c_scale,w_628.jpg, medium], [{{ site.baseurl }}/img/front-entry-after_g9tv58/front-entry-after_g9tv58_c_scale,w_628.jpg, large]" >
       </a>
     </div>
-    <div class="cell small-6 medium-4 large-3">this is an image thumbnail</div>
 </div>
 <div class="reveal" id="porch-before" data-reveal>
   <img data-interchange="[{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_659.jpg, small], [{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_1080.jpg, medium], [{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_1080.jpg, large]" >
