--- a/_posts/2018-12-23-porch.html
+++ b/_posts/2018-12-23-porch.html
@@ -10,15 +10,25 @@ permalink: /porch/post.html
     </p>
   </div>
 </div>
-<div class="grid-x grid-margin-x excerpt">
+<div class="grid-x grid-margin-x excerpt excerpt-images">
     <div class="cell small-6 medium-4 large-3">
-      <a data-open="porch-before" class="cell small-6 medium-4 large-4">
+      <a data-open="porch-before" class="cell small-6 medium-4 large-4 excerpt-image-container">
           <img data-interchange="[{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_276.jpg, small], [{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_596.jpg, medium], [{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_659.jpg, large]" >
+          <div class="caption-container">
+            <p class="caption-content">
+              Before: a face without a nose
+            </p>
+          </div>
       </a>
     </div>
     <div class="cell small-6 medium-4 large-3">
-      <a data-open="porch-after" class="cell small-6 medium-4 large-4">
+      <a data-open="porch-after" class="cell small-6 medium-4 large-4 excerpt-image-container">
           <img data-interchange="[{{ site.baseurl }}/img/front-entry-after_g9tv58/front-entry-after_g9tv58_c_scale,w_276.jpg, small], [{{ site.baseurl }}/img/front-entry-after_g9tv58/front-entry-after_g9tv58_c_scale,w_628.jpg, medium], [{{ site.baseurl }}/img/front-entry-after_g9tv58/front-entry-after_g9tv58_c_scale,w_628.jpg, large]" >
+          <div class="caption-container">
+            <p class="caption-content">
+              After: a face with a nose
+            </p>
+          </div>
       </a>
     </div>
 </div>
