--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@ title: home
   <div class="grid-x grid-margin-x excerpt">
     <div class="cell small-12 medium-8 large-9">
       <img src="{{site.baseurl}}/img/kepler-face_rz3viz/kepler-face_rz3viz_c_scale,w_276.png" id="kepler-greeting">
-      It’s been a busy year for Em & M, so I’m in charge of the card this year. Here are a few things that happened this year.
+      It’s been a busy year for Em & M, so I’m in charge of the card this year. Here are a few notable changes in their lives.
     </div>
   </div>
