adding images for kitchen

--- a/_posts/2018-12-22-kitchen.html
+++ b/_posts/2018-12-22-kitchen.html
@@ -12,8 +12,13 @@ permalink: /kitchen/post.html
 </div>
 <div class="grid-x grid-margin-x excerpt">
     <div class="cell small-6 medium-4 large-3">
-      <a data-open="porch-before" class="cell small-6 medium-4 large-4">
+      <a data-open="porch-before" class="cell small-6 medium-4 large-4 excerpt-image-container">
           <img data-interchange="[{{ site.baseurl }}/img/kitchen-before-stove_ij2jyi/kitchen-before-stove_ij2jyi_c_scale,w_276.jpg, small], [{{ site.baseurl }}/img/kitchen-before-stove_ij2jyi/kitchen-before-stove_ij2jyi_c_scale,w_662.jpg, medium], [{{ site.baseurl }}/img/kitchen-before-stove_ij2jyi/kitchen-before-stove_ij2jyi_c_scale,w_662.jpg, large]" >
+          <div class="caption-container">
+            <p class="caption-content">
+              Old kitchen
+            </p>
+          </div>
       </a>
     </div>
     <div class="cell small-6 medium-4 large-3">this is an image thumbnail</div>
