--- a/_posts/2018-12-23-porch.html
+++ b/_posts/2018-12-23-porch.html
@@ -16,7 +16,7 @@ permalink: /porch/post.html
           <img data-interchange="[{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_276.jpg, small], [{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_596.jpg, medium], [{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_659.jpg, large]" >
           <div class="caption-container">
             <p class="caption-content">
-              Before: a face without a nose
+              Before: a face with no nose
             </p>
           </div>
       </a>
