--- a/_posts/2018-12-22-kitchen.html
+++ b/_posts/2018-12-22-kitchen.html
@@ -12,7 +12,7 @@ permalink: /kitchen/post.html
 </div>
 <div class="grid-x grid-margin-x excerpt">
     <div class="cell small-6 medium-4 large-3">
-      <a data-open="porch-before" class="cell small-6 medium-4 large-4 excerpt-image-container">
+      <a data-open="kitchen-before-stove" class="cell small-6 medium-4 large-4 excerpt-image-container">
           <img data-interchange="[{{ site.baseurl }}/img/kitchen-before-stove_ij2jyi/kitchen-before-stove_ij2jyi_c_scale,w_276.jpg, small], [{{ site.baseurl }}/img/kitchen-before-stove_ij2jyi/kitchen-before-stove_ij2jyi_c_scale,w_662.jpg, medium], [{{ site.baseurl }}/img/kitchen-before-stove_ij2jyi/kitchen-before-stove_ij2jyi_c_scale,w_662.jpg, large]" >
           <div class="caption-container">
             <p class="caption-content">
@@ -21,16 +21,29 @@ permalink: /kitchen/post.html
           </div>
       </a>
     </div>
-    <div class="cell small-6 medium-4 large-3">this is an image thumbnail</div>
     <div class="cell small-6 medium-4 large-3">
-      <a data-open="porch-before" class="cell small-6 medium-4 large-4">
-          <img data-interchange="[{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_276.jpg, small], [{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_596.jpg, medium], [{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_659.jpg, large]" >
+      <a data-open="kitchen-before-dining-room" class="cell small-6 medium-4 large-4">
+          <img data-interchange="[{{ site.baseurl }}/img/kitchen-before-dining-room_cxyks7/kitchen-before-dining-room_cxyks7_c_scale,w_276.jpg, small], [{{ site.baseurl }}/img/kitchen-before-dining-room_cxyks7/kitchen-before-dining-room_cxyks7_c_scale,w_641.jpg, medium], [{{ site.baseurl }}/img/kitchen-before-dining-room_cxyks7/kitchen-before-dining-room_cxyks7_c_scale,w_641.jpg, large]" >
       </a>
     </div>
-    <div class="cell small-6 medium-4 large-3">this is an image thumbnail</div>
+    <div class="cell small-6 medium-4 large-3">
+      <a data-open="kitchen-during" class="cell small-6 medium-4 large-4">
+          <img data-interchange="[{{ site.baseurl }}/img/kitchen-during_erksc8/kitchen-during_erksc8_c_scale,w_276.jpg, small], [{{ site.baseurl }}/img/kitchen-during_erksc8/kitchen-during_erksc8_c_scale,w_777.jpg, medium], [{{ site.baseurl }}/img/kitchen-during_erksc8/kitchen-during_erksc8_c_scale,w_777.jpg, large]" >
+      </a>
+    </div>
+    <div class="cell small-6 medium-4 large-3">
+      <a data-open="kitchen-during" class="cell small-6 medium-4 large-4">
+          <img data-interchange="[{{ site.baseurl }}/img/kitchen-during_erksc8/kitchen-during_erksc8_c_scale,w_276.jpg, small], [{{ site.baseurl }}/img/kitchen-during_erksc8/kitchen-during_erksc8_c_scale,w_777.jpg, medium], [{{ site.baseurl }}/img/kitchen-during_erksc8/kitchen-during_erksc8_c_scale,w_777.jpg, large]" >
+      </a>
+    </div>
+    <div class="cell small-6 medium-4 large-3">
+      <a data-open="kitchen-after" class="cell small-6 medium-4 large-4">
+          <img data-interchange="[{{ site.baseurl }}/img/kitchen-after_tnka0k/kitchen-after_tnka0k_c_scale,w_276.png, small], [{{ site.baseurl }}/img/kitchen-after_tnka0k/kitchen-after_tnka0k_c_scale,w_681.png, medium], [{{ site.baseurl }}/img/kitchen-after_tnka0k/kitchen-after_tnka0k_c_scale,w_681.png, large]" >
+      </a>
+    </div>
 </div>
-<div class="reveal" id="porch-before" data-reveal>
-  <img data-interchange="[{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_659.jpg, small], [{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_1080.jpg, medium], [{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_1080.jpg, large]" >
+<div class="reveal" id="kitchen-before-stove" data-reveal>
+  <img data-interchange="[{{ site.baseurl }}/img/kitchen-before-stove_ij2jyi/kitchen-before-stove_ij2jyi_c_scale,w_276.jpg, small], [{{ site.baseurl }}/img/kitchen-before-stove_ij2jyi/kitchen-before-stove_ij2jyi_c_scale,w_662.jpg, medium], [{{ site.baseurl }}/img/kitchen-before-stove_ij2jyi/kitchen-before-stove_ij2jyi_c_scale,w_662.jpg, large]" >
   <button class="close-button" data-close aria-label="Close modal" type="button">
     <span aria-hidden="true">&times;</span>
   </button>
