--- a/_posts/2018-12-22-kitchen.html
+++ b/_posts/2018-12-22-kitchen.html
@@ -24,21 +24,31 @@ permalink: /kitchen/post.html
     <div class="cell small-6 medium-4 large-3">
       <a data-open="kitchen-before-dining-room" class="cell small-6 medium-4 large-4">
           <img data-interchange="[{{ site.baseurl }}/img/kitchen-before-dining-room_cxyks7/kitchen-before-dining-room_cxyks7_c_scale,w_276.jpg, small], [{{ site.baseurl }}/img/kitchen-before-dining-room_cxyks7/kitchen-before-dining-room_cxyks7_c_scale,w_641.jpg, medium], [{{ site.baseurl }}/img/kitchen-before-dining-room_cxyks7/kitchen-before-dining-room_cxyks7_c_scale,w_641.jpg, large]" >
+          <div class="caption-container">
+            <p class="caption-content">
+              Old kitchen
+            </p>
+          </div>
       </a>
     </div>
     <div class="cell small-6 medium-4 large-3">
       <a data-open="kitchen-during" class="cell small-6 medium-4 large-4">
           <img data-interchange="[{{ site.baseurl }}/img/kitchen-during_erksc8/kitchen-during_erksc8_c_scale,w_276.jpg, small], [{{ site.baseurl }}/img/kitchen-during_erksc8/kitchen-during_erksc8_c_scale,w_777.jpg, medium], [{{ site.baseurl }}/img/kitchen-during_erksc8/kitchen-during_erksc8_c_scale,w_777.jpg, large]" >
-      </a>
-    </div>
-    <div class="cell small-6 medium-4 large-3">
-      <a data-open="kitchen-during" class="cell small-6 medium-4 large-4">
-          <img data-interchange="[{{ site.baseurl }}/img/kitchen-during_erksc8/kitchen-during_erksc8_c_scale,w_276.jpg, small], [{{ site.baseurl }}/img/kitchen-during_erksc8/kitchen-during_erksc8_c_scale,w_777.jpg, medium], [{{ site.baseurl }}/img/kitchen-during_erksc8/kitchen-during_erksc8_c_scale,w_777.jpg, large]" >
+          <div class="caption-container">
+            <p class="caption-content">
+              Current state
+            </p>
+          </div>
       </a>
     </div>
     <div class="cell small-6 medium-4 large-3">
       <a data-open="kitchen-after" class="cell small-6 medium-4 large-4">
           <img data-interchange="[{{ site.baseurl }}/img/kitchen-after_tnka0k/kitchen-after_tnka0k_c_scale,w_276.png, small], [{{ site.baseurl }}/img/kitchen-after_tnka0k/kitchen-after_tnka0k_c_scale,w_681.png, medium], [{{ site.baseurl }}/img/kitchen-after_tnka0k/kitchen-after_tnka0k_c_scale,w_681.png, large]" >
+          <div class="caption-container">
+            <p class="caption-content">
+              Someday
+            </p>
+          </div>
       </a>
     </div>
 </div>
