fiddling with responsive image dimensions

--- a/_posts/2018-12-22-kitchen.html
+++ b/_posts/2018-12-22-kitchen.html
@@ -26,7 +26,7 @@ permalink: /kitchen/post.html
           <img data-interchange="[{{ site.baseurl }}/img/kitchen-before-dining-room_cxyks7/kitchen-before-dining-room_cxyks7_c_scale,w_276.jpg, small], [{{ site.baseurl }}/img/kitchen-before-dining-room_cxyks7/kitchen-before-dining-room_cxyks7_c_scale,w_641.jpg, medium], [{{ site.baseurl }}/img/kitchen-before-dining-room_cxyks7/kitchen-before-dining-room_cxyks7_c_scale,w_641.jpg, large]" >
           <div class="caption-container">
             <p class="caption-content">
-              Old kitchen
+              Old dining room
             </p>
           </div>
       </a>
@@ -46,14 +46,32 @@ permalink: /kitchen/post.html
           <img data-interchange="[{{ site.baseurl }}/img/kitchen-after_tnka0k/kitchen-after_tnka0k_c_scale,w_276.png, small], [{{ site.baseurl }}/img/kitchen-after_tnka0k/kitchen-after_tnka0k_c_scale,w_681.png, medium], [{{ site.baseurl }}/img/kitchen-after_tnka0k/kitchen-after_tnka0k_c_scale,w_681.png, large]" >
           <div class="caption-container">
             <p class="caption-content">
-              Someday
+              Someday. Note the cat for scale.
             </p>
           </div>
       </a>
     </div>
 </div>
 <div class="reveal" id="kitchen-before-stove" data-reveal>
-  <img data-interchange="[{{ site.baseurl }}/img/kitchen-before-stove_ij2jyi/kitchen-before-stove_ij2jyi_c_scale,w_276.jpg, small], [{{ site.baseurl }}/img/kitchen-before-stove_ij2jyi/kitchen-before-stove_ij2jyi_c_scale,w_662.jpg, medium], [{{ site.baseurl }}/img/kitchen-before-stove_ij2jyi/kitchen-before-stove_ij2jyi_c_scale,w_662.jpg, large]" >
+  <img data-interchange="[{{ site.baseurl }}/img/kitchen-before-stove_ij2jyi/kitchen-before-stove_ij2jyi_c_scale,w_915.jpg, small], [{{ site.baseurl }}/img/kitchen-before-stove_ij2jyi/kitchen-before-stove_ij2jyi_c_scale,w_1549.jpg, medium], [{{ site.baseurl }}/img/kitchen-before-stove_ij2jyi/kitchen-before-stove_ij2jyi_c_scale,w_2000.jpg, large]" >
+  <button class="close-button" data-close aria-label="Close modal" type="button">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+<div class="reveal" id="kitchen-before-dining-room" data-reveal>
+  <img data-interchange="[{{ site.baseurl }}/img/kitchen-before-dining-room_cxyks7/kitchen-before-dining-room_cxyks7_c_scale,w_887.jpg, small], [{{ site.baseurl }}/img/kitchen-before-dining-room_cxyks7/kitchen-before-dining-room_cxyks7_c_scale,w_1650.jpg, medium], [{{ site.baseurl }}/img/kitchen-before-dining-room_cxyks7/kitchen-before-dining-room_cxyks7_c_scale,w_2000.jpg, large]" >
+  <button class="close-button" data-close aria-label="Close modal" type="button">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+<div class="reveal" id="kitchen-during" data-reveal>
+  <img data-interchange="[{{ site.baseurl }}/img/kitchen-during_erksc8/kitchen-during_erksc8_c_scale,w_777.jpg, small], [{{ site.baseurl }}/img/kitchen-during_erksc8/kitchen-during_erksc8_c_scale,w_1693.jpg, medium], [{{ site.baseurl }}/img/kitchen-during_erksc8/kitchen-during_erksc8_c_scale,w_2000.jpg, large]" >
+  <button class="close-button" data-close aria-label="Close modal" type="button">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+<div class="reveal" id="kitchen-after" data-reveal>
+  <img data-interchange="[{{ site.baseurl }}/img/kitchen-after_tnka0k/kitchen-after_tnka0k_c_scale,w_834.png, small], [{{ site.baseurl }}/img/kitchen-after_tnka0k/kitchen-after_tnka0k_c_scale,w_1604.png, medium], [{{ site.baseurl }}/img/kitchen-after_tnka0k/kitchen-after_tnka0k_c_scale,w_2000.png, large]" >
   <button class="close-button" data-close aria-label="Close modal" type="button">
     <span aria-hidden="true">&times;</span>
   </button>
