--- a/_posts/2018-12-22-kitchen.html
+++ b/_posts/2018-12-22-kitchen.html
@@ -6,11 +6,11 @@ permalink: /kitchen/post.html
 ---
 <div class="grid-x grid-margin-x excerpt">
   <div class="cell small-12 medium-8 large-9">
-    <p>
+    <p>We are having our kitchen remodeled. It's taking a lot longer than expected, but it will be nice, I guess.
     </p>
   </div>
 </div>
-<div class="grid-x grid-margin-x excerpt">
+<div class="grid-x grid-margin-x excerpt excerpt-images">
     <div class="cell small-6 medium-4 large-3">
       <a data-open="kitchen-before-stove" class="cell small-6 medium-4 large-4 excerpt-image-container">
           <img data-interchange="[{{ site.baseurl }}/img/kitchen-before-stove_ij2jyi/kitchen-before-stove_ij2jyi_c_scale,w_276.jpg, small], [{{ site.baseurl }}/img/kitchen-before-stove_ij2jyi/kitchen-before-stove_ij2jyi_c_scale,w_662.jpg, medium], [{{ site.baseurl }}/img/kitchen-before-stove_ij2jyi/kitchen-before-stove_ij2jyi_c_scale,w_662.jpg, large]" >
@@ -22,7 +22,7 @@ permalink: /kitchen/post.html
       </a>
     </div>
     <div class="cell small-6 medium-4 large-3">
-      <a data-open="kitchen-before-dining-room" class="cell small-6 medium-4 large-4">
+      <a data-open="kitchen-before-dining-room" class="cell small-6 medium-4 large-4 excerpt-image-container">
           <img data-interchange="[{{ site.baseurl }}/img/kitchen-before-dining-room_cxyks7/kitchen-before-dining-room_cxyks7_c_scale,w_276.jpg, small], [{{ site.baseurl }}/img/kitchen-before-dining-room_cxyks7/kitchen-before-dining-room_cxyks7_c_scale,w_641.jpg, medium], [{{ site.baseurl }}/img/kitchen-before-dining-room_cxyks7/kitchen-before-dining-room_cxyks7_c_scale,w_641.jpg, large]" >
           <div class="caption-container">
             <p class="caption-content">
@@ -32,7 +32,7 @@ permalink: /kitchen/post.html
       </a>
     </div>
     <div class="cell small-6 medium-4 large-3">
-      <a data-open="kitchen-during" class="cell small-6 medium-4 large-4">
+      <a data-open="kitchen-during" class="cell small-6 medium-4 large-4 excerpt-image-container">
           <img data-interchange="[{{ site.baseurl }}/img/kitchen-during_erksc8/kitchen-during_erksc8_c_scale,w_276.jpg, small], [{{ site.baseurl }}/img/kitchen-during_erksc8/kitchen-during_erksc8_c_scale,w_777.jpg, medium], [{{ site.baseurl }}/img/kitchen-during_erksc8/kitchen-during_erksc8_c_scale,w_777.jpg, large]" >
           <div class="caption-container">
             <p class="caption-content">
@@ -42,7 +42,7 @@ permalink: /kitchen/post.html
       </a>
     </div>
     <div class="cell small-6 medium-4 large-3">
-      <a data-open="kitchen-after" class="cell small-6 medium-4 large-4">
+      <a data-open="kitchen-after" class="cell small-6 medium-4 large-4 excerpt-image-container">
           <img data-interchange="[{{ site.baseurl }}/img/kitchen-after_tnka0k/kitchen-after_tnka0k_c_scale,w_276.png, small], [{{ site.baseurl }}/img/kitchen-after_tnka0k/kitchen-after_tnka0k_c_scale,w_681.png, medium], [{{ site.baseurl }}/img/kitchen-after_tnka0k/kitchen-after_tnka0k_c_scale,w_681.png, large]" >
           <div class="caption-container">
             <p class="caption-content">
