--- a/_posts/2018-12-20-baby.html
+++ b/_posts/2018-12-20-baby.html
@@ -6,26 +6,40 @@ permalink: /baby/post.html
 ---
 <div class="grid-x grid-margin-x excerpt">
   <div class="cell small-12 medium-8 large-9">
-    <p>This is a story about the baby. It is a long and interesting story that takes a long time to tell. Why don't you have a cup of tea and I'll tell you about it.
+    <p>Em is growing a human. If this is a surprise to you, welcome to the club.
     </p>
   </div>
 </div>
-<div class="grid-x grid-margin-x excerpt">
+<div class="grid-x grid-margin-x excerpt excerpt-images">
     <div class="cell small-6 medium-4 large-3">
-      <a data-open="porch-before" class="cell small-6 medium-4 large-4">
-          <img data-interchange="[{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_276.jpg, small], [{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_596.jpg, medium], [{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_659.jpg, large]" >
+      <a data-open="emandm-before" class="cell small-6 medium-4 large-4 excerpt-image-container">
+          <img data-interchange="[{{ site.baseurl }}/img/emandm-before_btu4pn/emandm-before_btu4pn_c_scale,w_276.jpg, small], [{{ site.baseurl }}/img/emandm-before_btu4pn/emandm-before_btu4pn_c_scale,w_572.jpg, medium], [{{ site.baseurl }}/img/emandm-before_btu4pn/emandm-before_btu4pn_c_scale,w_788.jpg, large]" >
       </a>
+      <div class="caption-container">
+        <p class="caption-content">
+          Em and Mike in the yard before child. Photo credit: Burlap.
+        </p>
+      </div>
     </div>
-    <div class="cell small-6 medium-4 large-3">this is an image thumbnail</div>
     <div class="cell small-6 medium-4 large-3">
-      <a data-open="porch-before" class="cell small-6 medium-4 large-4">
-          <img data-interchange="[{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_276.jpg, small], [{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_596.jpg, medium], [{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_659.jpg, large]" >
+      <a data-open="emandm-after" class="cell small-6 medium-4 large-4 excerpt-image-container">
+          <img data-interchange="[{{ site.baseurl }}/img/emandm-after_obfmby/emandm-after_obfmby_c_scale,w_276.jpg, small], [{{ site.baseurl }}/img/emandm-after_obfmby/emandm-after_obfmby_c_scale,w_628.jpg, medium], [{{ site.baseurl }}/img/emandm-after_obfmby/emandm-after_obfmby_c_scale,w_628.jpg, large]" >
       </a>
+      <div class="caption-container">
+        <p class="caption-content">
+          Em and Mike in the temporary kitchen. Note baby bump. Photo credit: Aneudy Alba.
+        </p>
+      </div>
     </div>
-    <div class="cell small-6 medium-4 large-3">this is an image thumbnail</div>
 </div>
-<div class="reveal" id="porch-before" data-reveal>
-  <img data-interchange="[{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_659.jpg, small], [{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_1080.jpg, medium], [{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_1080.jpg, large]" >
+<div class="reveal" id="emandm-before" data-reveal>
+  <img data-interchange="[{{ site.baseurl }}/img/emandm-before_btu4pn/emandm-before_btu4pn_c_scale,w_788.jpg, small], [{{ site.baseurl }}/img/emandm-before_btu4pn/emandm-before_btu4pn_c_scale,w_1287.jpg, medium], [{{ site.baseurl }}/img/emandm-before_btu4pn/emandm-before_btu4pn_c_scale,w_2000.jpg, large]" >
+  <button class="close-button" data-close aria-label="Close modal" type="button">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+<div class="reveal" id="emandm-after" data-reveal>
+  <img data-interchange="[{{ site.baseurl }}/img/emandm-after_obfmby/emandm-after_obfmby_c_scale,w_869.jpg, small], [{{ site.baseurl }}/img/emandm-after_obfmby/emandm-after_obfmby_c_scale,w_1248.jpg, medium], [{{ site.baseurl }}/img/emandm-after_obfmby/emandm-after_obfmby_c_scale,w_2000.jpg, large]" >
   <button class="close-button" data-close aria-label="Close modal" type="button">
     <span aria-hidden="true">&times;</span>
   </button>
