--- a/_posts/2018-12-21-beard.html
+++ b/_posts/2018-12-21-beard.html
@@ -6,26 +6,40 @@ permalink: /beard/post.html
 ---
 <div class="grid-x grid-margin-x excerpt">
   <div class="cell small-12 medium-8 large-9">
-    <p>This is a story about the beard. It is a long and interesting story that takes a long time to tell. Why don't you have a cup of tea and I'll tell you about it.
+    <p>Mike grew chin hair for me to scratch my face on.
     </p>
   </div>
 </div>
-<div class="grid-x grid-margin-x excerpt">
+<div class="grid-x grid-margin-x excerpt excerpt-images">
     <div class="cell small-6 medium-4 large-3">
-      <a data-open="porch-before" class="cell small-6 medium-4 large-4">
-          <img data-interchange="[{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_276.jpg, small], [{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_596.jpg, medium], [{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_659.jpg, large]" >
+      <a data-open="mike-before" class="cell small-6 medium-4 large-4 excerpt-image-container">
+          <img data-interchange="[{{ site.baseurl }}/img/mike-before_ukybz7/mike-before_ukybz7_c_scale,w_276.jpg, small], [{{ site.baseurl }}/img/mike-before_ukybz7/mike-before_ukybz7_c_scale,w_606.jpg, medium], [{{ site.baseurl }}/img/mike-before_ukybz7/mike-before_ukybz7_c_scale,w_606.jpg, large]" >
       </a>
+      <div class="caption-container">
+        <p class="caption-content">
+          Early stages.
+        </p>
+      </div>
     </div>
-    <div class="cell small-6 medium-4 large-3">this is an image thumbnail</div>
     <div class="cell small-6 medium-4 large-3">
-      <a data-open="porch-before" class="cell small-6 medium-4 large-4">
-          <img data-interchange="[{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_276.jpg, small], [{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_596.jpg, medium], [{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_659.jpg, large]" >
+      <a data-open="mike-after" class="cell small-6 medium-4 large-4 excerpt-image-container">
+          <img data-interchange="[{{ site.baseurl }}/img/mike-after_wzsg5v/mike-after_wzsg5v_c_scale,w_276.jpg, small], [{{ site.baseurl }}/img/mike-after_wzsg5v/mike-after_wzsg5v_c_scale,w_640.jpg, medium], [{{ site.baseurl }}/img/mike-after_wzsg5v/mike-after_wzsg5v_c_scale,w_640.jpg, large]" >
       </a>
+      <div class="caption-container">
+        <p class="caption-content">
+          Mid-way through. Background: Matt Eng.
+        </p>
+      </div>
     </div>
-    <div class="cell small-6 medium-4 large-3">this is an image thumbnail</div>
 </div>
-<div class="reveal" id="porch-before" data-reveal>
-  <img data-interchange="[{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_659.jpg, small], [{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_1080.jpg, medium], [{{ site.baseurl }}/img/front-entry-before/front-entry-before_jfsruz_c_scale,w_1080.jpg, large]" >
+<div class="reveal" id="mike-before" data-reveal>
+  <img data-interchange="[{{ site.baseurl }}/img/mike-before_ukybz7/mike-before_ukybz7_c_scale,w_832.jpg, small], [{{ site.baseurl }}/img/mike-before_ukybz7/mike-before_ukybz7_c_scale,w_1611.jpg, medium], [{{ site.baseurl }}/img/mike-before_ukybz7/mike-before_ukybz7_c_scale,w_2000.jpg, large]" >
+  <button class="close-button" data-close aria-label="Close modal" type="button">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+<div class="reveal" id="mike-after" data-reveal>
+  <img data-interchange="[{{ site.baseurl }}/img/mike-after_wzsg5v/mike-after_wzsg5v_c_scale,w_640.jpg, small], [{{ site.baseurl }}/img/mike-after_wzsg5v/mike-after_wzsg5v_c_scale,w_640.jpg, medium], [{{ site.baseurl }}/img/mike-after_wzsg5v/mike-after_wzsg5v_c_scale,w_640.jpg, large]" >
   <button class="close-button" data-close aria-label="Close modal" type="button">
     <span aria-hidden="true">&times;</span>
   </button>
