changed mike after image, content for entryway

--- a/_posts/2018-12-21-beard.html
+++ b/_posts/2018-12-21-beard.html
@@ -23,10 +23,10 @@ permalink: /beard/post.html
     </div>
     <div class="cell small-6 medium-4 large-3">
       <a data-open="mike-after" class="cell small-6 medium-4 large-4 excerpt-image-container">
-          <img data-interchange="[{{ site.baseurl }}/img/mike-after_wzsg5v/mike-after_wzsg5v_c_scale,w_276.jpg, small], [{{ site.baseurl }}/img/mike-after_wzsg5v/mike-after_wzsg5v_c_scale,w_640.jpg, medium], [{{ site.baseurl }}/img/mike-after_wzsg5v/mike-after_wzsg5v_c_scale,w_640.jpg, large]" >
+          <img data-interchange="[{{ site.baseurl }}/img/mike-after_um6tix/mike-after_um6tix_c_scale,w_287.jpg, small], [{{ site.baseurl }}/img/mike-after_um6tix/mike-after_um6tix_c_scale,w_603.jpg, medium], [{{ site.baseurl }}/img/mike-after_um6tix/mike-after_um6tix_c_scale,w_603.jpg, large]" >
           <div class="caption-container">
             <p class="caption-content">
-              Mid-way through. Background: Matt Eng.
+              Current state.
             </p>
           </div>
       </a>
@@ -39,7 +39,7 @@ permalink: /beard/post.html
   </button>
 </div>
 <div class="reveal" id="mike-after" data-reveal>
-  <img data-interchange="[{{ site.baseurl }}/img/mike-after_wzsg5v/mike-after_wzsg5v_c_scale,w_640.jpg, small], [{{ site.baseurl }}/img/mike-after_wzsg5v/mike-after_wzsg5v_c_scale,w_640.jpg, medium], [{{ site.baseurl }}/img/mike-after_wzsg5v/mike-after_wzsg5v_c_scale,w_640.jpg, large]" >
+  <img data-interchange="[{{ site.baseurl }}/img/mike-after_um6tix/mike-after_um6tix_c_scale,w_830.jpg, small], [{{ site.baseurl }}/img/mike-after_um6tix/mike-after_um6tix_c_scale,w_1609.jpg, medium], [{{ site.baseurl }}/img/mike-after_um6tix/mike-after_um6tix_c_scale,w_2000.jpg, large]" >
   <button class="close-button" data-close aria-label="Close modal" type="button">
     <span aria-hidden="true">&times;</span>
   </button>
