--- a/_posts/2018-12-23-porch.html
+++ b/_posts/2018-12-23-porch.html
@@ -49,10 +49,16 @@ permalink: /porch/post.html
     <div class="cell small-12 medium-6 large-6 speech-container voice-kepler">
       <div class="speech">
         <p>
-          Our kitchen smells of old softwood covered by what is now paper pulp but may have once been a more substantial layer between wood and tile, the remnants of early formaldehyde-ridden particle board, and the insides of walls that haven’t been exposed to light and air for almost 100 years. Also in the mix is the familiar pine framing that sat on our garage floor in a pile where I had to stumble over it every time I put away or retrieved Max, my folding bike. The morning light now beams freely through the kitchen window into the dining room since the wall was taken down between the two spaces. On its way, it scratches over protruding corners of fiberglass rolls, splintering ends of dimensional lumber, and masonry rubble. Em had a vision of how the natural light would flow before we started. Once demolition was complete, she stood where the wall once was and was satisfied to see the vision realized. The internal systems of our house are mostly visible in the kitchen: old iron pipes with corrosion spilling out of the joints, plumbing traps from the second floor bathroom above, capped stubs of new copper water supply lines, snipped old electrical cables, new red and blue flexible plastic arteries and veins.
+          This guy, Jay kept coming in the house with his work boots. I wasn't amused, so I gave him my death stare to force him outside of the house. It worked, and he spent a few days outside the front door. Here's what my view looked like before he started.
         </p>
         <p>
-          Somebody drew a waterfowl on a piece of the framing. I am not sure who it was or why this was done, but I appreciate it. One day, someone else will take down the wall and discover it. I hope that person will be amused. When Em came to visit me in the Netherlands, there was a bench with swan sculptures on the side of it. The bench was secured in place with chains, and Em made a comment that nobody would swander off with it.
+          <img data-interchange="[{{ site.baseurl }}/img/front-entry-inside_qazksr/front-entry-inside_qazksr_c_scale,w_645.jpg, small], [{{ site.baseurl }}/img/front-entry-inside_qazksr/front-entry-inside_qazksr_c_scale,w_896.jpg, medium], [{{ site.baseurl }}/img/front-entry-inside_qazksr/front-entry-inside_qazksr_c_scale,w_1079.jpg, large]" >
+        </p>
+        <p>
+          Here's my view afterwards.
+        </p>
+        <p>
+          <img data-interchange="[{{ site.baseurl }}/img/front-entry-inside_qazksr/front-entry-inside_qazksr_c_scale,w_645.jpg, small], [{{ site.baseurl }}/img/front-entry-inside_qazksr/front-entry-inside_qazksr_c_scale,w_896.jpg, medium], [{{ site.baseurl }}/img/front-entry-inside_qazksr/front-entry-inside_qazksr_c_scale,w_1079.jpg, large]" >
         </p>
       </div>
       {% include attribution-kepler.html %}
@@ -60,7 +66,10 @@ permalink: /porch/post.html
     <div class="cell small-12 medium-6 large-6 speech-container voice-emandm">
       <div class="speech">
         <p>
-          This is the first big project we’re doing with the inheritance from my late Grandma Rice. We realized as we were going through her old yearbook that her friends called her Spigot (or Spiggott) since her last name at the time was Fawcett. It also seemed that one friend filled in an entire page of her yearbook. Seeing that yearbook revealed a side of her that I never knew. I remember her as chatty, full of energy and optimistic, but also somewhat proper. She got dressed up and went to her Presbyterian church every Sunday. Even in her last years, she and her friends in her retirement home got dressed up quite fancy to go to dinner with each other. I had a hard time imagining anyone calling her Spiggott. During our search for a new kitchen faucet, I thought of her often.
+          Before this project, it was a bit awkward to let people in the front door. It involved waving hello with the screen door shut, asking them to back down the stairs so that we could open the screen door, and then asking them to come back up the stairs to come inside. It made for a difficult Halloween or two - fortunately no small Power Rangers were injured. Now entering the front door is a lot more natural.
+        </p>
+        <p>
+          Also, Em described the front of the house before this project as a face without a nose. Our contractor, Jay now describes it as the best looking nose on the street.
         </p>
       </div>
       {% include attribution-us.html %}
